# xfce-dock-plugin

./: Makefile.am  README  configure.ac.in
data/: dock-plugin.rc  xfce4-dock-plugin.xml
lib/: Makefile.am  dock-application-view.vala  dock-plugin.vala  dock-task-item.vala  test-dock-view.vala  widget-view.vala
lib/cairo/: cairo-color.vala  cairo-context.vala  cairo-pattern.vala
lib/engine/: engine.vala  lucido-engine.vala
lib/model/: dock-model.vala
lib/view/: dock-cell-image.vala  dock-cell.vala  dock-container.vala  dock-item.vala  dock-view.vala
src/: Makefile.am
src/task/: Makefile.am  dock-cell-task.vala  dock-task-model.vala  dock-task-plugin.desktop.in.in  dock-task-plugin.vala  launcher.vala
vapi/: config.vapi  garcon-1.vapi  libgtop-2.0.vapi  libxfce4panel-1.0.vapi  libxfce4util-1.0.vapi  libxfconf-0.vapi
